# GLCPP

./: CMakeLists.txt  README.md  camermaMain.cpp  lightMain.cpp  main.cpp  materialMain.cpp  specularMain.cpp
glad/: glad.c
glsldata/: camera_fragment.glsl  camera_vertex.glsl  color_fgt.glsl  color_vtx.glsl  cube_fragment.glsl  cube_vertex.glsl  lamp_fgt.glsl  lighting_fgt.glsl  lighting_vtx.glsl  material_fgt.glsl  materials_vtx.glsl  specular_lighting_fgt.glsl  texture_fragment.glsl  texture_vertex.glsl
shader/: Shader.cpp  Shader.h
shape/: Cube.cpp  Cube.h  TextureRect.cpp  TextureRect.h  Triangle.cpp  Triangle.h
utils/: Camera.cpp  Camera.h  FileUtils.h  stb_image_compile.cpp
